--- a/style.css
+++ b/style.css
@@ -45,6 +45,7 @@ body{
     max-width: 300px;
     border-radius: 20px;
     padding: 2rem 2rem 4rem 2rem;
+    box-shadow:  0px 2px 8px rgba(99, 99, 99, 0.2);
 }
 
 .qr__photo{
